# lab2

./: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  Converter.h  NewWAV.cpp  NewWAV.h  Processor.cpp  Processor.h  WAVparser.cpp  WAVparser.h  config.txt  main.cpp  parser.cpp  parser.h  processor.cpp  processor.h
